syntax = "proto3";

package user;

option go_package = "grpc_project/userpb";

service UserService {
    rpc AddUser(AddUserRequest) returns (AddUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message AddUserRequest {
    string name = 1;
    string email = 2;
}

message AddUserResponse {
    User user = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
    repeated User users = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}
